Making presubmit more rigorous
Added clang-tidy to the setup script, makefile and to presubmit checks.

Removed NOLINT checking from cpplint to allow clang-tidy NOLINT comments
warnings from cppling to be suppressed.

Refactored codebase to adhere the the new checks provided by clang-tidy.

Setup will now generate makefile and environment links for example
projects.

Added a project linking script to setup links to the repos makefile and
environment file (env.sh).

With this commit, the following things are now checked:
1. Base clang-tidy checks except for:
    1. va-list checks
    2. printf formating
    3. google's virtual default arguments check
2. Identifier names will be checked to make sure they conform to the
code bases standards
3. Warnings during builds become errors. This creates the rule that, no
library or example project code is allowed to generate warnings.
4. HelloWorld and all example projects will be built to verify that they
can be built. This creates the rule that HelloWorld and all example
projects must be able to build

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,4 +1,5 @@
 set noparent
-filter=-whitespace/braces,-legal/copyright,-readability/check,-whitespace/newline
+filter=-whitespace/braces,-legal/copyright,+readability/check,-readability/nolint,-whitespace/newline,+build/include_what_you_use
 linelength=80
 root=firmware
+
